--- a/public/style.css
+++ b/public/style.css
@@ -56,6 +56,7 @@ a {
 .logo img {
     height: 38px;
     padding-top: 15px;
+    margin-left: 5px;
 }
 
 .topo input {
@@ -292,7 +293,6 @@ a {
     flex-direction: column;
     margin-left: 14px;
     font-weight: 300;
-    /*color: #8E8E8E;*/
 }
 
 .sidebar > .sugestoes .titulo {
